--- a/views/hjz.slim
+++ b/views/hjz.slim
@@ -5,6 +5,7 @@ html lang="en"
     title #{title}
     link href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="all" type="text/css"
     link href="/css/print.css" rel="stylesheet" media="all"
+    link href="/css/print_a4.css" rel="stylesheet" media="all"
   body
     .container
       .page
