--- a/views/asz_2014.slim
+++ b/views/asz_2014.slim
@@ -1,9 +1,10 @@
+- PDFKit::configure{|config| config.default_options[:orientation] = 'Landscape'; config.default_options[:page_size] = 'A3'}
 doctype 5
 html lang="en"
   head
     meta charset="utf-8"
     title #{title}
-    link href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="all" type="text/css"
+    link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="all" type="text/css"
     link href="/css/print.css" rel="stylesheet" media="all"
     link href="/css/print_a3.css" rel="stylesheet" media="all"
   body
