--- a/views/layout.slim
+++ b/views/layout.slim
@@ -5,10 +5,10 @@ html lang="en"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
     title Sahib
     /![if lt IE 9]
-      script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.js"
-      script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.js"
-    link href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="all" type="text/css"
-    link href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"
+      script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.js"
+      script src="http://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.js"
+    link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="all" type="text/css"
+    link href="http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"
     link href="/css/app.css" rel="stylesheet"
   body
     .container
@@ -24,9 +24,9 @@ html lang="en"
               span.input-group-btn
                 button.btn.btn-default.btn-lg type="submit" Suchen
       ==yield
-    script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"
-    script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"
-    script src="//cdn.jsdelivr.net/typeahead.js/0.10.5/typeahead.bundle.min.js"
+    script src="http://cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"
+    script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"
+    script src="http://cdn.jsdelivr.net/typeahead.js/0.10.5/typeahead.bundle.min.js"
     javascript:
       (function() {
         var schueler = new Bloodhound({
