--- a/views/print.scss
+++ b/views/print.scss
@@ -69,3 +69,34 @@ hr {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
+.page {
+  position: relative;
+  padding: 10mm 25mm 10mm 25mm;
+  background-color: #ffeaea;
+  border: 1px solid black;
+  -webkit-box-shadow: 5px 5px 4px 0px rgba(192,192,192,1);
+  -moz-box-shadow: 5px 5px 4px 0px rgba(192,192,192,1);
+  box-shadow: 5px 5px 4px 0px rgba(192,192,192,1);
+  margin-bottom: 10px;
+  -webkit-print-color-adjust: exact;
+}
+.subpage {
+  font: 10pt "Tex Gyre Heros" !important;
+  background-color: white;
+  position: relative;
+  min-height: 100%;
+}
+@media print {
+  .container {
+    padding: 0;
+    margin: 0;
+  }
+  .page {
+    page-break-after: always;
+    border: none;
+    margin-bottom: 0px;
+    -webkit-box-shadow:initial;
+    -moz-box-shadow:initial;
+    box-shadow: initial;
+  }
+}
