--- a/views/layout.slim
+++ b/views/layout.slim
@@ -13,17 +13,22 @@ html lang="en"
   body
     .container
       .row.hidden-print
-        .col-md-12
+        .col-xs-12
           h3
             | Klasse oder Nachname eingeben, um Schüler auszuwählen
       .row.hidden-print
-        .col-md-5
+        .col-xs-5
           form#search-form name="search" role="search"
             .input-group
               input.form-control.input-lg#searchinput placeholder=("Suchen …") type="text" /
               span.input-group-btn
                 button.btn.btn-default.btn-lg Suchen
           .voffset-20
+        -if request.path_info.start_with?("/dokument/")
+          .col-xs-offset-2.col-xs-4
+            a.btn.btn-success.btn-lg href="#{request.path_info}.pdf"
+              |PDF erzeugen
+
       ==yield
     script src="http://cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"
     script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"
