--- a/views/app.scss
+++ b/views/app.scss
@@ -1,5 +1,32 @@
-.voffset-20 {
-  margin-top: 20px;
+.voffset-halb {
+  margin-top: 0.5em;
+}
+.voffset-1 {
+  margin-top: 1em;
+}
+.voffset-2 {
+  margin-top: 2em;
+}
+.voffset-3 {
+  margin-top: 3em;
+}
+.voffset-4 {
+  margin-top: 4em;
+}
+.voffset-5 {
+  margin-top: 5em;
+}
+.voffset-6 {
+  margin-top: 6em;
+}
+.voffset-7 {
+  margin-top: 7em;
+}
+.voffset-8 {
+  margin-top: 8em;
+}
+.voffset-9 {
+  margin-top: 9em;
 }
 tr.clickable-row {
   cursor: pointer;
