--- a/views/klasse.slim
+++ b/views/klasse.slim
@@ -1,66 +1,28 @@
-.row
-  .col-xs-6
-    h1
-      =k.klasse
-      small  #{k.bildungsgang}
-    small =k.klassenlehrer
-  .col-xs-6
-    h1 #{k.akt_jahr}, #{k.akt_abschnitt}
-    .btn-group.hidden-print
-      a.btn.btn-primary.btn-lg type="button" href="/dokument/hjz/#{k.klasse}/#{k.akt_jahr}/#{k.akt_abschnitt}"
-        | Zeugnisse drucken
-      button.btn.btn-primary.btn-lg.dropdown-toggle type="button" data-toggle="dropdown" aria-expanded="false"
-        span.caret
-      ul.dropdown-menu role="menu"
-        -k.abschnitte.each do |a|
-          -next if a[:jahr] == k.akt_jahr && a[:abschnitt] == k.akt_abschnitt
-          li
-            a href="/dokument/hjz/#{k.klasse}/#{a[:jahr]}/#{a[:abschnitt]}"
-              ="#{a[:abschnitt]}. Halbjahr #{a[:schuljahr]}"
-        li.divider
-        li
-          a href="/dokument/asz_2014/#{k.klasse}/#{k.akt_jahr}/#{k.akt_abschnitt}"
-            |Abschlusszeugnis
-.row
-  .col-xs-10
-    h3 Aktive Schüler
-    table.table.table-condensed
-      tr
-        th
-          th Vorname
-        th Name
-        th Adresse
-        th Telefon
-        th Geburtsdatum
-      -k.schueler_details(k.aktive_schueler).each_with_index do |s,i|
-        tr.clickable-row data-url="/schueler/#{s[:id]}"
-          td class=(s[:volljaehrig] ? "success" : "danger")
-            =i+1
-          td =s[:vorname]
-          td =s[:name]
-          td =s[:adresse]
-          td =s[:telefon]
-          td class=(s[:volljaehrig] ? "success" : "danger")
-            =s[:geburtsdatum]
-
-.row.hidden-print
-  .col-xs-10
-    h3 Inktive Schüler
-    table.table.table-condensed
-      tr
-        th
-        th Vorname
-        th Name
-        th Adresse
-        th Telefon
-        th Geburtsdatum
-      -k.schueler_details(k.inaktive_schueler).each_with_index do |s,i|
-        tr.clickable-row data-url="/schueler/#{s[:id]}"
-          td class=(s[:volljaehrig] ? "success" : "danger")
-            =i+1
-          td =s[:vorname]
-          td =s[:name]
-          td =s[:adresse]
-          td =s[:telefon]
-          td class=(s[:volljaehrig] ? "success" : "danger")
-            =s[:geburtsdatum]
+==partial :p_klassenkopf, :k => klasse, :jahr => klasse.s.akt_schuljahr, :abschnitt => klasse.s.akt_abschnitt, :dokumente => dokumente
+-[klasse.aktive_schueler, klasse.inaktive_schueler].each_with_index do |k,ii|
+  .row class=(ii == 0 ? "" : "hidden-print")
+    .col-xs-12.col-md-10
+      h3 #{ii == 0 ? "Aktive Schüler" : "Inaktive Schueler"}
+      table.table.table-condensed
+        tr
+          th
+            th Vorname
+          th Name
+          th Adresse
+          th Telefon
+          th Geburtsdatum
+          th Info
+        -k.each_with_index do |s,i|
+          tr.clickable-row data-url="/schueler/#{s.id}"
+            td class=(s.volljaehrig_bei?(Time.now) ? "success" : "danger")
+              =i+1
+            td =s.vorname
+            td =s.name
+            td =s.adresse
+            td =s.telefon
+            td class=(s.volljaehrig_bei?(Time.now) ? "success" : "danger")
+              =s.geburtsdatum.strftime("%d.%m.%Y")
+              ==< s.monate_bis_18 ? "<small>(#{s.monate_bis_18}m)</small>" : ""
+            td
+              -if s.vermerke.any?
+                span.label.label-warning data-toggle="tooltip" data-placement="left" title="#{s.vermerke.map{|v| v.bemerkung}.join('; ')}" =s.vermerke.count{|v| v.bemerkung}
